--- a/src/main/resources/templates/notice.html
+++ b/src/main/resources/templates/notice.html
@@ -11,15 +11,16 @@
 	<div class="container">
 		<h2>공지사항 게시판</h2>
 		<div class="row">
-			<div style="float:right;">
-				<button type="button" id="myBtn" class="btn btn-primary">글 작성</button>
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-10">
 				<div class="input-group">
-					<input class="form-control" id="keyword" placeholder="검색어를 입력하세요." required> 
+					<select class="form-control" id="options" name="options" style="width: 30%;" required>
+						<option value="1">제목</option>
+						<option value="2">작성일</option>
+						<option value="3">작성자</option>
+						<option value="4">최종수정일</option>
+						<option value="5">내용</option>
+					</select>
+					<input class="form-control" id="keyword" placeholder="검색어를 입력하세요." style="width: 70%;" required> 
 						<span class="input-group-btn">
 							<button type="button" class="btn btn-default" id="keywordBtn">
 							<i class="glyphicon glyphicon-search"></i>
@@ -27,32 +28,34 @@
 					</span>
 				</div>
 			</div>
-
-			<div class="col-md-9">
-				<table class="table table-list-search">
-					<colgroup>
-				 		<col width="50%;">
-				 		<col width="10%;">
-				 		<col width="10%;">
-				 		<col width="10%;">
-				 	</colgroup>
-					<thead>
-						<tr>
-							<th>제목</th>
-							<th>작성자</th>
-							<th>작성일</th>
-							<th>최종수정일</th>
-						</tr>
-					</thead>
-					<tbody id="noticeContents">
-					</tbody>
-				</table>
-				
-				<div class="baordPaging">
-		        	<ul class="pagination">
-		            </ul>
-		       </div>
+			<div style="float:right;">
+				<button type="button" id="myBtn" class="btn btn-primary">글 작성</button>
 			</div>
+		</div>
+		<div class="row">
+			<table class="table table-list-search">
+				<colgroup>
+			 		<col width="50%;">
+			 		<col width="10%;">
+			 		<col width="10%;">
+			 		<col width="10%;">
+			 	</colgroup>
+				<thead>
+					<tr>
+						<th>제목</th>
+						<th>작성자</th>
+						<th>작성일</th>
+						<th>최종수정일</th>
+					</tr>
+				</thead>
+				<tbody id="noticeContents">
+				</tbody>
+			</table>
+			
+			<div class="baordPaging">
+	        	<ul class="pagination">
+	            </ul>
+	       </div>
 		</div>
 		
 		<!-- Modal -->
