--- a/src/main/resources/templates/notice.html
+++ b/src/main/resources/templates/notice.html
@@ -11,27 +11,55 @@
 	<div class="container">
 		<h2>공지사항 게시판</h2>
 		<div class="row">
-			<div class="col-md-10">
-				<div class="input-group">
-					<select class="form-control" id="options" name="options" style="width: 30%;" required>
-						<option value="1">제목</option>
-						<option value="2">작성일</option>
-						<option value="3">작성자</option>
-						<option value="4">최종수정일</option>
-						<option value="5">내용</option>
-					</select>
-					<input class="form-control" id="keyword" placeholder="검색어를 입력하세요." style="width: 70%;" required> 
-						<span class="input-group-btn">
-							<button type="button" class="btn btn-default" id="keywordBtn">
-							<i class="glyphicon glyphicon-search"></i>
-						</button>
-					</span>
-				</div>
-			</div>
-			<div style="float:right;">
-				<button type="button" id="myBtn" class="btn btn-primary">글 작성</button>
-			</div>
+			<form action="#" id="searchForm">
+				<table class="table">
+					<colgroup>
+				 		<col width="20%;">
+				 		<col width="80%;">
+				 	</colgroup>
+					<thead>
+						<tr>
+							<th>
+								<select class="form-control" id="option_date" required>
+									<option value="2">작성일</option>
+									<option value="4">최종수정일</option>
+								</select>
+							</th>
+							<th>
+								<input type="date" class="form-control" id="sta_ymd" value="1900-01-01" style="width: 150px; display: table-row;" required>
+								~
+								<input type="date" class="form-control" id="end_ymd" value="2999-12-31" style="width: 150px; display: table-row;" required>
+							</th>
+						</tr>
+						<tr>
+							<th>
+								<select class="form-control" id="option_keyword" required>
+									<option value="1">제목</option>
+									<option value="3">작성자</option>
+									<option value="5">내용</option>
+								</select>
+							</th>
+							<th class="input-group">
+								<input class="form-control" id="keyword" placeholder="검색어를 입력하세요." required> 
+								<span class="input-group-btn">
+									<button type="button" class="btn btn-default" id="keywordBtn">
+										<i class="glyphicon glyphicon-search"></i>
+									</button>
+								</span>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td colspan="2" align="right">
+								<button type="button" id="myBtn" class="btn btn-primary">글 작성</button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</form>
 		</div>
+		
 		<div class="row">
 			<table class="table table-list-search">
 				<colgroup>
